tests/rosetta/out/Haskell/call-a-function-12.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/call-a-function-12.hs:27:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/call-a-function-12.hs:19:1
                 /workspace/mochi/tests/rosetta/out/Haskell/call-a-function-12.hs:27:1
   |
27 | main = do
   | ^^^^
